[package]
name = "warframe-market"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
reqwest = { version = "0.11.17", features = ["json"] }
serde = { version = "1.0.162", features = ["derive"] }
serde_json = "1.0.96"
futures-util = "0.3.28"
convert_case = "0.6.0"
clap = { version = "4.1.1", features = ["derive"] }
anyhow = "1.0.71"
